# EncryptedDisk

./: .gitignore  CMakeLists.txt  FindWdk.cmake
NewUserMode/NewUserMode/: CmakeLists.txt  ImageFnc.cpp  ImageFnc.h  main.cpp  mntFileImage.cpp  mntFileImage.h
TESTCallDriver/: CmakeLists.txt  TESTCallDriver.cpp
TESTDriver/: CMakeLists.txt  ControlDeviceIrpHandler.c  ControlDeviceIrpHandler.h  IRP.c  IRP.h  MountManager.c  TESTDriver.inf  VirtualDisk.h  main.c  pch.h  test.c  test.h
TESTDriver/SRC/ControlDeviceIrpHandler/: ControlDeviceIrpHandler.c  ControlDeviceIrpHandler.h
TESTDriver/SRC/IRP/: IRP.c  IRP.h
TESTDriver/SRC/IRPQueue/: IRPQueue.c  IRPQueue.h
TESTDriver/SRC/MountManager/: MountManager.c  MountManager.h
TESTDriver/SRC/MountedDisk/: MountedDisk.c  MountedDisk.h
TESTDriver/SRC/ProtectedVector/: ProtectedVector.c  ProtectedVector.h
TESTDriver/SRC/VirtualDisk/: VirtualDisk.c  VirtualDisk.h
TESTDriver/SRC/main/: main.c  pch.h
UserMode/: DriverControl.cpp  DriverControl.h  SyncMounter.cpp  SyncMounter.h  main.cpp  mntDriverControl.cpp  mntDriverControl.h  mntFileImage.cpp  mntFileImage.h  mntImage.h  mntSyncMountManager.cpp  mntSyncMountManager.h
VirtualEncryptedDiskDriver/: CMakeLists.txt  VirtualEncryptedDiskDriver.filters  VirtualEncryptedDiskDriver.inf
VirtualEncryptedDiskDriver/SRC/IRP/: IRP.c  IRP.h
VirtualEncryptedDiskDriver/SRC/MountManager/: MountManager.c
VirtualEncryptedDiskDriver/SRC/main/: main.c  pch.c  pch.h
VirtualEncryptedDiskUserMode/: CmakeLists.txt  VirtualEncryptedDiskUserMode.filters
VirtualEncryptedDiskUserMode/SRC/: ImageFnc.cpp  ImageFnc.h  main.cpp
